# projects-api

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  init.sql
.github/workflows/: docker.yml  rust.yml
migrations/2025-03-18-072040_create_projects/: down.sql  up.sql
src/: main.rs  postgres.rs  redis.rs  schema.rs
src/handlers/: projects.rs
src/jobs/: health.rs
src/routes/: projects.rs
